# sre-enginnerllm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  execution.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py
.sisyphus/plans/: reward-redesign.md
coliseum/: README.md  __init__.py  client.py  server.py
demo/: pitch.md  run_demo.sh
deploy/: push_to_hf.sh
docs/: ADVANCED_TIER.md  ARCHITECTURE.md  BASIC_TIER.md  OPERATIONS_TIER.md  REFERENCES.md  REWARD_DESIGN.md  SCENARIO_AUTHORING.md  TRIAGE_TIER.md
eval/: holdout_basic.json
eval/results/: README.md
notebooks/: 01_basic_train_grpo_unsloth.ipynb  01_triage_train_grpo.ipynb  01_triage_train_grpo.py  02_basic_eval_comparison.ipynb  03_advanced_blueprint_walkthrough.ipynb  04_max_demo_chaos.ipynb
openclaw_integration/: README.md  __init__.py  generate_with_sre.py  pool_server.py  sre_env_client.py
scripts/: eval_baseline.py  plot_curves.py  run_server.py
server/: __init__.py  app.py  requirements.txt
skill/: SKILL.md
skill/tools/: sre_gym_client.py
skill/verified-runbooks/: auth_token_expiry.md  cache_stale_state.md  db_config_rollout.md  dep_degradation.md  gateway_auth_rollout.md  memory_leak_oom.md  migration_lock.md  network_partition.md  payment_webhook_misconfig.md  rate_limit_retry_storm.md  schema_drift_missing_migration.md  worker_deploy_cascade.md
sre_gym/: __init__.py  basic_runner.py  env.py  exceptions.py  tier.py
sre_gym/advanced/: __main__.py  runner.py
sre_gym/advanced/scenarios/: cascading_release_train.yaml  observability_pipeline_outage.yaml  supabase_rls_silent_leak.yaml
sre_gym/max/: __main__.py  runner.py
sre_gym/max/compose/: ecommerce.yaml
sre_gym/operations/: __init__.py  __main__.py  runner.py
sre_gym/operations/chaos/: ecommerce_chaos_library.yaml
sre_gym/operations/families/: ecommerce_vibecoded_saas.yaml
sre_gym/strategy/: __init__.py  __main__.py  runner.py
sre_gym/strategy/scenarios/: cascading_release_train.yaml
sre_gym/ui/: __init__.py  policies.py  providers.py  router.py  runner.py
tests/: test_app_ui_contract.py  test_inference_covers_all_root_causes.py  test_mcp_route_parity.py  test_providers_smoke.py  test_runners.py  test_skill_runbooks_cover_all_templates.py  test_sre_gym_wrapper.py  test_ui_layer.py
train/: collect_trajectories.py  compile_claude_seed.py  eval_sweep.py  grpo_run.ipynb  requirements-train.txt  run_expert_collection.py  sanity_run.ipynb
train/data/: README.md  claude_db_config_rollout.jsonl  claude_db_config_rollout__p01.jsonl  claude_gateway_auth_rollout.jsonl  claude_gateway_auth_rollout__p03.jsonl  claude_seed.jsonl  claude_worker_deploy_cascade.jsonl  claude_worker_deploy_cascade__p02.jsonl  eval_sweep_baselines.jsonl  llama33_70b_groq_100.jsonl  llama33_70b_groq_smoke3.jsonl  llama33_70b_smoke4.jsonl  seed_combined.jsonl  sonnet_missing6.jsonl
unified_incident_env/: README.md  __init__.py  client.py  interface.py  models.py
unified_incident_env/scripts/: __init__.py  baseline_agent.py  walkthrough.py
unified_incident_env/server/: __init__.py  app.py  baselines.py  basic_templates_extra.py  challenge.py  environment.py  grader.py  mcp.py
unified_incident_env/tests/: __init__.py  test_environment.py  test_round2_templates.py  test_submission_inference.py  test_trainer.py  test_trainer_session.py
unified_incident_env/trainer/: __init__.py  action_adapter.py  analyze_failures.py  backend.py  build_datasets.py  build_sft_dataset.py  collect_trajectory.py  eval_models.py  parser.py  policy_adapter.py  prompts.py  reporting.py  run_episode.py  run_session.py  session_config.py  train_external.py  trajectory_memory.py  trajectory_store.py  types.py  update_model.py
